aanpassingen transaction nav test en begin controllertest

--- a/parque_banque_server/src/main/resources/templates/confirmtransaction.html
+++ b/parque_banque_server/src/main/resources/templates/confirmtransaction.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Lisa Kemeling">
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>new transaction</title>
+    <title>Bevestig</title>
 </head>
 <body>
 <!-- navigatie-->
