--- a/parque_banque_server/src/main/resources/templates/index.html
+++ b/parque_banque_server/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
     <!-- LINK tot stylesheet and fonts -->
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
-    <title>Homepage</title>
+    <title>Home</title>
 </head>
 <body>
     <div class="page-content">
