--- a/parque_banque_server/src/main/resources/templates/newtransaction.html
+++ b/parque_banque_server/src/main/resources/templates/newtransaction.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Lisa Kemeling">
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>new transaction</title>
+    <title>Overboeken</title>
 </head>
 <body>
 <!-- navigatie-->
@@ -28,6 +28,7 @@
                     <label for="cents">,</label>
                     <input th:field="*{cents}" id="cents" type="text" size="2" pattern="\d{2}" placeholder="00">
                     <span th:if="${insufficientFunds}">U heeft onvoldoende saldo op deze rekening</span>
+                    <span th:if="${lessThenOne}">Minimale bedrag is 1 cent</span>
                 </div>
                 <div>
                     <label  for="iban">Rekeningnummer (IBAN) ontvanger</label>
