--- a/parque_banque_server/src/main/resources/templates/contact.html
+++ b/parque_banque_server/src/main/resources/templates/contact.html
@@ -6,7 +6,7 @@
 
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>Contactpagina</title>
+    <title>Contact</title>
     <style>
         #contact-content{
             margin-left: 25px;
