--- a/parque_banque_server/src/main/resources/static/css/login.css
+++ b/parque_banque_server/src/main/resources/static/css/login.css
@@ -21,26 +21,37 @@
     padding: 5px;
     margin-bottom: 5px;
 }
+.login-form .username_empty,
+.login-form .password_empty {
+    font-size: 14px;
+    font-weight: bold;
+    color: #C62828;
+    text-align: center;
+    margin-top: 4px;
+    display: none;
+}
 label {
     display: inline-block;
-    width: 225px;
+    padding: 1px 1px;
+    width: 220px;
     text-align: left;
     margin-top: 5px;
+    margin-bottom: 3px;
 }
-input[type=text], input[type=password]{
+input[type=text], input[type=password], select{
     display: inline-block;
-    width: 225px;
-    border: thin solid #FFFFFF;
+    padding: 3px 3px;
+    width: 220px;
+    border: thin #FFFFFF;
     text-align: left;
+    outline: none;
 }
 .loginbutton {
-    display: block;
+    display: inline-block;
     width: 20%;
-    height: 5%;
-    border: none;
+    height: 7%;
     border-radius: 10px;
-    position: absolute;
-    left: 23%;
+    border: none;
     color: #000000;
     cursor: pointer;
 }
@@ -48,5 +59,5 @@ input[type=text], input[type=password]{
     text-decoration: underline;
 }
 .text{
-    margin-top: 15px;
+    font-size: 15px;
 }
