--- a/parque_banque_server/src/main/resources/templates/createlogin.html
+++ b/parque_banque_server/src/main/resources/templates/createlogin.html
@@ -5,17 +5,7 @@
     <title>Maak account - Parque Banque</title>
     <link th:href="@{/css/signup.css}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <script>
-        function Validate() {
-            var password = document.getElementById("password").value;
-            var confirmPassword = document.getElementById("confirmpassword").value;
-            if (password !== confirmPassword) {
-                document.getElementById("passMismatch").style.display = "inline";
-                return false;
-            }
-            return true;
-        }
-    </script>
+    <script type="text/javascript" src="/javascript/createlogin.js" defer></script>
     <style>
         input {
             width: 660px;
@@ -35,7 +25,7 @@
     <h1>Maak een account</h1>
     <p>Bedenk voor uw account een gebruikersnaam en wachtwoord. Onthoud deze goed.</p>
     <p>Als u op Klaar klikt, dan kunt u meteen inloggen en bankieren bij Parque Banque!</p>
-    <form action="#" th:action="@{/klant-worden}" th:object="${createLoginFormBean}" method="post">
+    <form id="form" action="#" th:action="@{/klant-worden}" th:object="${createLoginFormBean}" method="post">
         <div>
             <label for="username">Gebruikersnaam</label>
             <span th:if="${usernameTaken}" class="error" style="float: right">Deze gebruikersnaam bestaat al</span>
@@ -47,12 +37,14 @@
         <div>
             <label for="password">Wachtwoord</label>
             <input id="password" type="password" required
-                   pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%?&]{8,255}$" th:field="*{password}"
+                   pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,255}$" th:field="*{password}"
                    title="Wachtwoord moet minstens 8 tekens lang zijn, en in elk geval een hoofdletter, een kleine letter, een cijfer een een speciaal teken (@$!%?&) bevatten"
                    oninvalid="setCustomValidity('Wachtwoord moet minstens 8 tekens lang zijn, en in elk ' +
                              'geval een hoofdletter, een kleine letter, een cijfer een een speciaal teken (@$!%?&) ' +
                               'bevatten')"
                    oninput="setCustomValidity('')" />
+            <label for="strength">Sterkte: </label>
+            <progress max="100" value="0" id="strength"></progress>
         </div>
         <div>
             <label for="confirmpassword">Bevestig wachtwoord</label>
@@ -60,7 +52,7 @@
             <input id="confirmpassword" type="password" required />
         </div>
         <div>
-            <button type="submit" name="action" value="finish" onclick="return Validate()" style="float: right">Klaar</button>
+            <button id="done" type="submit" name="action" value="finish" style="float: right">Klaar</button>
             <button type="submit" name="action" value="cancel" formnovalidate>Annuleren</button>
         </div>
 
