--- a/parque_banque_server/src/main/resources/static/css/main.css
+++ b/parque_banque_server/src/main/resources/static/css/main.css
@@ -79,7 +79,9 @@ text-align: center;
     max-width: 940px;
     height: auto;
 }
-
+.form1{
+    margin-left: 20px
+}
 
 footer {
    display: inline-block;
