progress bar verplaatst naar rechts

--- a/parque_banque_server/src/main/resources/templates/createlogin.html
+++ b/parque_banque_server/src/main/resources/templates/createlogin.html
@@ -43,8 +43,8 @@
                              'geval een hoofdletter, een kleine letter, een cijfer een een speciaal teken (@$!%?&) ' +
                               'bevatten')"
                    oninput="setCustomValidity('')" />
-            <label for="strength">Sterkte: </label>
-            <progress max="100" value="0" id="strength"></progress>
+            <progress max="100" value="0" id="strength" style="float: right"></progress>
+            <label for="strength" style="float: right">Sterkte: </label>
         </div>
         <div>
             <label for="confirmpassword">Bevestig wachtwoord</label>
