--- a/parque_banque_server/src/main/resources/static/css/main.css
+++ b/parque_banque_server/src/main/resources/static/css/main.css
@@ -19,7 +19,7 @@ a {
 }
 
 #logo img{
-    width: 80px; 
+    width: 130px; 
     height:50px;
     padding: 0;
     margin: 0;
@@ -49,9 +49,10 @@ a {
 }
 
 li.nav-link {
+    overflow: hidden;
     float: right;
-    width: 125px;
-    margin-right: 0.625%;
+    width: 15%;
+    margin-right: 0.698%;
     text-align: center;
     line-height: 3;
     background:#37ad49;   
@@ -77,7 +78,6 @@ text-align: center;
 .main-content img{
     width: 100%;
     max-width: 940px;
-    height: auto;
 }
 
 
