--- a/parque_banque_server/src/main/resources/templates/selectedaccount.html
+++ b/parque_banque_server/src/main/resources/templates/selectedaccount.html
@@ -9,11 +9,12 @@
 <body>
     <!--rekeningnummer, tenaamstelling, huidige datum en tijd, saldo
         op de rekening en een overzicht van de laatste 10 transacties.-->
+    <h4>Datum en tijd:<span th:text="${DatumEnTijd}"></span></h4> <br/>
+    <h4>Rekeningnummer: <span th:text="${iban}"></span></h4>
+    <h4 th:if="${isCompany}" class="error"> Bedrijfsnaam: <span th:text="${businessName}"></span> </h4>
+    <h4>Tenaamstelling: <span th:text="${names}"></span></h4> <!--naam rekeninghouder, namen rekeninghouders, naam bedrijf + rekeninghouder, naam bedrijf + rekeninghouders-->
+    <h4>Saldo: <span th:text="${saldo}"></span></h4> <!--bedrag op de rekening obv iban-->
 
-    <h4>Rekeningnummer: <span th:text="${iban}" /></h4>
-    <h4>Tenaamstelling: <span th:text="${name}"/></h4> <!--naam rekeninghouder, namen rekeninghouders, naam bedrijf + rekeninghouder, naam bedrijf + rekeninghouders-->
-    <h4>Datum en tijd:<span th:text="${DatumEnTijd}"></span></h4>
-    <h2>Saldo: <span th:text="${saldo}" /></h2> <!--bedrag op de rekening obv iban-->
     <a href="/rekeninghouder-toevoegen"><button>Rekeninghouder toevoegen</button></a>
     <a href="/overboeken"><button>Geld overmaken</button></a>
     <h2>Transacties</h2>
@@ -28,7 +29,6 @@
         <li><span th:field="Transactie2" />Transactie 8</li>
         <li><span th:field="Transactie3" />Transactie 9</li>
         <li><span th:field="Transactie4" />Transactie 10</li>
-
     </ul>
 </body>
 </html>
