--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -1,136 +1,138 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>rekeningoverzicht</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>rekeningoverzicht</title>
 
-    <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <style>
-        table {
-            alignment: center;
-            width: 100%;
-            border: 1px solid black
-        }
-        td {
-            font-family: "Arial",sans-serif;
-            width: 100px;
-            font-size: small;
-        }
-        th {
-            border: 1px solid #dddddd;
-            text-align: left;
-            font-family: "Arial",sans-serif;
-            font-size: small;
-            padding: 8px;
-            width: 300px;
-        }
-        thead {
-            font-size: 8px
-        }
-        h1 {
-            font-family: "Arial",sans-serif;
-            font-size: x-large;
-        }
-        h2 {
-            font-family: "Arial", sans-serif;
-            font-size: small;
-        }
-        tr:nth-child(even) {
-            background-color: #dddddd;
-        }
-        button {
-            alignment: left;
-        }
-        tr[data-href]:hover {
-            cursor: pointer;
-        }
-    </style>
-</head>
+        <style>
+            body {
+                position: absolute;
+            }
+            table {
+                alignment: center;
+                width: 100%;
+                border: 1px solid black
+            }
+            td {
+                font-family: "Arial",sans-serif;
+                width: 100px;
+                font-size: small;
+            }
+            th {
+                border: 1px solid #dddddd;
+                text-align: left;
+                font-family: "Arial",sans-serif;
+                font-size: small;
+                padding: 8px;
+                width: 300px;
+            }
+            thead {
+                font-size: 8px
+            }
+            h1 {
+                font-family: "Arial",sans-serif;
+                font-size: x-large;
+            }
+            h2 {
+                font-family: "Arial", sans-serif;
+                font-size: small;
+            }
+            tr:nth-child(even) {
+                background-color: #dddddd;
+            }
+            button {
+                alignment: left;
+            }
+            tr[data-href]:hover {
+                cursor: pointer;
+            }
+        </style>
+    </head>
 
-<body>
-    <!-- navigatie -->
-    <nav class="navigation">
-        <ul>
-            <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
-            <li class="nav-link"><a  href="/inloggen">Inloggen</a></li>
-            <li class="nav-link"><a  href="/klant-worden">Klant worden</a></li>
-            <li class="nav-link"><a  href="/contact">Contact</a></li>
-        </ul>
-    </nav>
+    <body>
+        <!-- navigatie -->
+        <nav class="navigation">
+            <ul>
+                <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
+                <li class="nav-link"><a  href="/rekening-overzicht">Rekeningoverzicht</a></li>
+                <li class="nav-link"><a  href="/rekening-openen">Rekening openen</a></li>
+                <li class="nav-link"><a  href="/uitloggen">Uitloggen</a></li>
+            </ul>
+        </nav>
 
-    <!-- body -->
-    <br/><br/>
-    <h1>Welkom <span th:text="${customer.firstName}"></span> <span th:text="${customer.affix}"></span> <span th:text="${customer.surName}"></span> bij Parque Banque!
+        <!-- body -->
+        <br/><br/><br/>
+        <h1>Welkom <span th:text="${customer.firstName}"></span> <span th:text="${customer.affix}"></span> <span th:text="${customer.surName}"></span> bij Parque Banque!
+            <br/>
+            <h2>Hier vindt u het overzicht van uw rekening(en)</h2>
+        </h1>
+
         <br/>
-        <h2>Hier vindt u het overzicht van uw rekening(en)</h2>
-    </h1>
 
-    <br/>
+        <button onclick="document.location = '/wijzigen-rekening'">Wijzigen gegevens</button>
+        <!--<button onclick="document.location = '/rekening-openen'">Rekening openen</button>--->
+        <button onclick="document.location = '/rekening-koppelen'">Rekening koppelen</button>
+        <!--<button onclick="document.location = '/uitloggen'">Uitloggen</button>--->
 
-    <button onclick="document.location = '/wijzigen-rekening'">Wijzigen gegevens</button>
-    <button onclick="document.location = '/rekening-openen'">Rekening openen</button>
-    <button onclick="document.location = '/rekening-koppelen'">Rekening koppelen</button>
-    <button onclick="document.location = '/uitloggen'">Uitloggen</button>
+        <br/>
 
-    <br/>
+        <h1>Prive Rekening</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Rekeninghouder</th>
+                    <th>IBAN</th>
+                    <th>Saldo</th>
+                </tr>
+            </thead>
 
-    <h1>Prive Rekening</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Rekeninghouder</th>
-                <th>IBAN</th>
-                <th>Saldo</th>
-            </tr>
-        </thead>
+            <tbody>
+                <tr th:if="${privateaccounts.empty}">
+                    <td> Geen rekeningen </td>
+                </tr>
+                <tr th:each="privateaccount : ${privateaccounts}" th:data-href="@{/rekening-overzicht/details{iban} (iban=${privateaccount.iban})}">
+                    <td th:text="${customer.firstName + ' ' + customer.affix + ' ' + customer.surName}"></td>
+                    <td th:text="${privateaccount.iban}"></td>
+                    <td th:text="${privateaccount.balanceEuros}"></td>
+                </tr>
+            </tbody>
+        </table>
+        <br/>
+        <br/>
 
-        <tbody>
-            <tr th:if="${privateaccounts.empty}">
-                <td> Geen rekeningen </td>
-            </tr>
-            <tr th:each="privateaccount : ${privateaccounts}" th:data-href="@{/rekening-overzicht/details{iban}
-            (iban=${privateaccount.iban})}">
-                <td th:text="${customer.firstName + ' ' + customer.affix + ' ' + customer.surName}"></td>
-                <td th:text="${privateaccount.iban}"></td>
-                <td th:text="${privateaccount.balanceEuros}"></td>
-            </tr>
-        </tbody>
-    </table>
-    <br/>
-    <br/>
+        <h1>Zakelijke rekening</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Rekeninghouder</th>
+                    <th>IBAN</th>
+                    <th>Saldo</th>
+                </tr>
+            </thead>
 
-    <h1>Zakelijke rekening</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Rekeninghouder</th>
-                <th>IBAN</th>
-                <th>Saldo</th>
-            </tr>
-        </thead>
+            <tbody>
+                <tr th:if="${businessaccounts.empty}">
+                    <td> Geen rekeningen </td>
+                </tr>
+                <tr th:each="businessaccount : ${businessaccounts}" th:data-href="@{/rekening-overzicht/details{iban}
+                (iban=${businessaccount.iban})}">
+                    <td th:text="${customer.firstName + ' ' + customer.affix + ' '+ customer.surName}"></td>
+                    <td th:text="${businessaccount.iban}"></td>
+                    <td th:text="${businessaccount.balanceEuros}"></td>
+                </tr>
+            </tbody>
+        </table>
 
-        <tbody>
-            <tr th:if="${businessaccounts.empty}">
-                <td> Geen rekeningen </td>
-            </tr>
-            <tr th:each="businessaccount : ${businessaccounts}" th:data-href="@{/rekening-overzicht/details{iban}
-            (iban=${businessaccount.iban})}">
-                <td th:text="${customer.firstName + ' ' + customer.affix + ' '+ customer.surName}"></td>
-                <td th:text="${businessaccount.iban}"></td>
-                <td th:text="${businessaccount.balanceEuros}"></td>
-            </tr>
-        </tbody>
-    </table>
-
-    <script>
-        $(document).ready(function () {
-            $(document.body).on("click", "tr[data-href]", function () {
-                window.location.href = this.dataset.href;
+        <script>
+            $(document).ready(function () {
+                $(document.body).on("click", "tr[data-href]", function () {
+                    window.location.href = this.dataset.href;
+                })
             })
-        })
-    </script>
-</body>
+        </script>
+    </body>
 </html>
