--- a/parque_banque_server/src/main/resources/templates/selectedaccount.html
+++ b/parque_banque_server/src/main/resources/templates/selectedaccount.html
@@ -3,24 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Geselecteerde rekening</title>
-    <link th:href="@{/css/main.css}" rel="stylesheet">
+    <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
+<nav class="navigation">
+    <ul>
+        <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
+        <li class="nav-link"><a  href="/contact">Contact</a></li>
+    </ul>
+
+</nav>
     <!--rekeningnummer, tenaamstelling, huidige datum en tijd, saldo
         op de rekening en een overzicht van de laatste 10 transacties.-->
 
-    <h4>Rekeningnummer: <span th:text="${iban}" /></h4>
-    <h4>Tenaamstelling: <span th:text="${name}"/></h4> <!--naam rekeninghouder, namen rekeninghouders, naam bedrijf + rekeninghouder, naam bedrijf + rekeninghouders-->
-    <h4>Datum en tijd:<span th:text="${DatumEnTijd}"></span></h4>
-    <h2>Saldo: <span th:text="${saldo}" /></h2> <!--bedrag op de rekening obv iban-->
+    <h4>Rekeningnummer:  <span th:text="${iban}" ></span></h4>
+    <h4>Tenaamstelling:  <span th:text="${name}"></span></h4>
+    <h4>Datum en tijd:   <span th:text="${DatumEnTijd}"></span></h4>
+    <h2>Saldo:  <span th:text="${saldo}" ></span></h2> <!--bedrag op de rekening obv iban-->
     <a href="/rekeninghouder-toevoegen"><button>Rekeninghouder toevoegen</button></a>
     <a href="/overboeken"><button>Geld overmaken</button></a>
+    <a href="/rekening-overzicht"><button>Rekeningoverzicht</button></a>
+
     <h2>Transacties</h2>
-    <ul>
-        <li><span th:field="Transactie1" />Transactie 1</li>
-
-
-    </ul>
+    <p>Bedrag   Beschrijving    Datum   Tegenrekening</p>
+    <table>
+        <tr>
+      <p th:each="transactie : ${transacties}"><span th:text="${transactie.getAmountCent()}">  </span>
+          <span th:text="${transactie.description}"> </span> <span th:text="${transactie.date}"> </span>
+          <span th:text="${transactie.getDebitAccount().getIban()}" > </span></p>
+        </tr>
+    </table>
 </body>
 </html>
