--- a/parque_banque_server/src/main/resources/templates/signup.html
+++ b/parque_banque_server/src/main/resources/templates/signup.html
@@ -65,28 +65,7 @@
 
             <div>
                 <p>ADRESGEGEVENS</p>
-                <div style="width: 520px">
-                    <label for="street">Straat</label> <br>
-                    <input id="street" type="text" required pattern="^[- 'A-Za-zÀ-ÖØ-öø-ÿ0-9]{2,255}$" th:field="*{street}"
-                           title="Vul uw straatnaam in"
-                           oninvalid="setCustomValidity('Straatnaam is verplicht')"
-                           oninput="setCustomValidity('')" />
-                </div>
-                <div style="width: 100px">
-                    <label for="number">Huisnummer</label> <br>
-                    <input id="number" type="text" required pattern="[1-9][0-9]{0,4}" th:field="*{number}"
-                           title="Vul uw huisnummer in"
-                           oninvalid="setCustomValidity('Huisnummer is verplicht')"
-                           oninput="setCustomValidity('')" />
-                </div>
-                <div style="width: 100px">
-                    <label for="addition">Toevoeging</label> <br>
-                    <input id="addition" type="text" pattern="$|[0-9a-zA-Z -]{1,255}" th:field="*{addition}"
-                           title="Vul uw toevoeging in"
-                           oninvalid="setCustomValidity('Toevoeging kan enkel letters, cijfers, en een streepje ('-') bevatten')"
-                           oninput="setCustomValidity('')" />
-                </div>
-                <div style="width: 80px">
+                <div style="width: 150px">
                     <label for="zipcode">Postcode</label>
                     <input id="zipcode" type="text" required pattern="[1-9][0-9]{3}[A-Za-z]{2}|[1-9][0-9]{3}[\s][A-Za-z]{2}"
                            th:field="*{zipcode}"
@@ -94,7 +73,29 @@
                            oninvalid="setCustomValidity('U moet een Nederlandse postcode invullen (bijvoorbeeld 1111AA of 1111 AA)')"
                            oninput="setCustomValidity('')"/>
                 </div>
-                <div style="width: 415px">
+
+                <div style="width: 100px">
+                    <label for="number">Huisnummer</label> <br>
+                    <input id="number" type="text" required pattern="[1-9][0-9]{0,4}" th:field="*{number}"
+                           title="Vul uw huisnummer in"
+                           oninvalid="setCustomValidity('Huisnummer is verplicht')"
+                           oninput="setCustomValidity('')" />
+                </div>
+                <div style="width: 345px">
+                    <label for="addition">Toevoeging</label> <br>
+                    <input id="addition" type="text" pattern="$|[0-9a-zA-Z -]{1,255}" th:field="*{addition}"
+                           title="Vul uw toevoeging in"
+                           oninvalid="setCustomValidity('Toevoeging kan enkel letters, cijfers, en een streepje ('-') bevatten')"
+                           oninput="setCustomValidity('')" />
+                </div>
+                <div>
+                    <label for="street">Straat</label> <br>
+                    <input id="street" type="text" required pattern="^[- 'A-Za-zÀ-ÖØ-öø-ÿ0-9]{2,255}$" th:field="*{street}"
+                           title="Vul uw straatnaam in"
+                           oninvalid="setCustomValidity('Straatnaam is verplicht')"
+                           oninput="setCustomValidity('')" />
+                </div>
+                <div>
                     <label for="city">Woonplaats</label>
                     <input id="city" type="text" required pattern="^[- 'A-Za-zÀ-ÖØ-öø-ÿ]{2,255}$" th:field="*{city}"
                            title="Vul uw woonplaats in"
