het formulier kan weer gesubmit worden, alleen de errors blijven staan

--- a/parque_banque_server/src/main/resources/static/css/main.css
+++ b/parque_banque_server/src/main/resources/static/css/main.css
@@ -52,7 +52,7 @@ a {
 li.nav-link {
     overflow: hidden;
     float: right;
-    width: 15%;
+    width: 150px;
     margin-right: 0.698%;
     text-align: center;
     line-height: 3;
