confirmsignup.html aangepast zoals signup.html

--- a/parque_banque_server/src/main/resources/templates/confirmsignup.html
+++ b/parque_banque_server/src/main/resources/templates/confirmsignup.html
@@ -55,23 +55,23 @@
             </div>
             <div>
                 <p>ADRESGEGEVENS</p>
-                <div style="width: 520px">
-                    <label for="street">Straat</label>
-                    <input id="street" type="text" readonly th:field="${signupform.street}"/>
+                <div style="width: 150px">
+                    <label for="zipcode">Postcode</label>
+                    <input id="zipcode" type="text" readonly th:field="${signupform.zipcode}"/>
                 </div>
                 <div style="width: 100px">
                     <label for="number">Huisnummer</label>
                     <input id="number" type="text" readonly th:field="${signupform.number}"/>
                 </div>
-                <div style="width: 100px">
+                <div style="width: 345px">
                     <label for="addition">Toevoeging</label>
                     <input id="addition" type="text" readonly th:field="${signupform.addition}"/>
                 </div>
-                <div style="width: 80px">
-                    <label for="zipcode">Postcode</label>
-                    <input id="zipcode" type="text" readonly th:field="${signupform.zipcode}"/>
+                <div>
+                    <label for="street">Straat</label>
+                    <input id="street" type="text" readonly th:field="${signupform.street}"/>
                 </div>
-                <div style="width: 415px">
+                <div>
                     <label for="city">Woonplaats</label>
                     <input id="city" type="text" readonly th:field="${signupform.city}"/>
                 </div>
