--- a/parque_banque_server/src/main/resources/templates/linkpaymentaccountconfirmation.html
+++ b/parque_banque_server/src/main/resources/templates/linkpaymentaccountconfirmation.html
@@ -14,6 +14,9 @@
         <li class="nav-link"><a href="/contact">Contact</a></li>
     </ul>
 </nav>
-Gefeliciteerd! U bent mederekeninghouder geworden!
+<br/>
+<br/>
+<br/>
+<h1>Gefeliciteerd, u bent mederekeninghouder geworden!</h1>
 </body>
 </html>
